feat(faturamento): cria serviço e contrato para projeção mensal com estratégias

--- a/Backend/Src/EnveloperWeb.Application/EnveloperWeb.Application.csproj
+++ b/Backend/Src/EnveloperWeb.Application/EnveloperWeb.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\EnveloperWeb.Domain\EnveloperWeb.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\AlertasServices\" />
+    <Folder Include="Services\UsuariosServices\" />
+  </ItemGroup>
+
 </Project>
