--- a/Backend/Src/EnveloperWeb.Infrastructure/EnveloperWeb.Infrastructure.csproj
+++ b/Backend/Src/EnveloperWeb.Infrastructure/EnveloperWeb.Infrastructure.csproj
@@ -6,4 +6,17 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EnveloperWeb.Domain\EnveloperWeb.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Persistance\Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="9.0.6" />
+  </ItemGroup>
+
 </Project>
