--- a/Backend/Src/EnveloperWeb.Infrastructure/EnveloperWeb.Infrastructure.csproj
+++ b/Backend/Src/EnveloperWeb.Infrastructure/EnveloperWeb.Infrastructure.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ExternalServices\Messaging\" />
+    <Folder Include="ExternalServices\Weather\" />
     <Folder Include="Persistance\Migrations\" />
   </ItemGroup>
 
